--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Jun Jung",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "session.socket.io": "^0.2.1",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.4"
   }
