--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "session.socket.io": "^0.2.1",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vkzlch123/bingogame-backend"
   }
 }
